--- a/style.css
+++ b/style.css
@@ -1,8 +1,29 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&display=swap');
+
 *{
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
 }
 
+html, body{
+    width: 100%;
+    height: 100vh;
+}
+
+header{
+    background-color: #0c0c0c;
+    padding: 40px;
+    width: 100%;
+}
+
+header h1{
+    font-family: 'Passion One';
+    font-size: 5em;
+    font-variant: small-caps;
+    color: rgb(247, 247, 247);
+
+    text-align: center;
+}
