--- a/style.css
+++ b/style.css
@@ -6,24 +6,47 @@
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 html, body{
-    width: 100%;
-    height: 100vh;
+    max-height: 100vh;
+    background-color: rgb(24, 24, 24);
 }
 
 header{
     background-color: #0c0c0c;
     padding: 40px;
-    width: 100%;
+    text-align: center;
 }
 
 header h1{
     font-family: 'Passion One';
-    font-size: 5em;
+    font-size: 10vw;
     font-variant: small-caps;
-    color: rgb(247, 247, 247);
+    color: #f7f7f7;
 
+}
+
+header p{
+    font-size: 1.1em;
+    color: #f7f7f7;
+
+    text-align: center;
+}
+
+a{
+    color: #f7f7f7;
+    font-weight: bold;
+    text-decoration: none;
+}
+a:hover{
+    text-decoration: underline;
+}
+
+footer{
+    padding: 10px;
+    color: #f7f7f7;
+    background-color: #0c0c0c;
     text-align: center;
 }
