Ajuste de responsividade e efeito parallax

--- a/style.css
+++ b/style.css
@@ -6,11 +6,11 @@
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 html, body{
-    max-height: 100vh;
+    min-height: 100vh;
     background-color: rgb(24, 24, 24);
 }
 
@@ -42,6 +42,37 @@ a{
 }
 a:hover{
     text-decoration: underline;
+}
+
+
+main{
+    background-color: #f7f7f7;
+}
+
+section{
+    padding: 5vh 40px 10vh 40px;
+    font-size: 3.5vw;
+    line-height: 2em;
+}
+section > p{
+    padding-top: 5vh;
+}
+
+#bkg01{
+    background-image: url('images/background001.jpg');
+    background-position: right center;
+    background-attachment: fixed;
+    background-size: cover;
+    background-repeat: no-repeat;
+    
+}
+
+#bkg02{
+    background-image: url('images/background002.jpg');
+    background-position: right center;
+    background-attachment: fixed;
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
 footer{
