--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 
-@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&family=Sriracha&display=swap');
 
 *{
     margin: 0px;
@@ -44,18 +44,15 @@ a:hover{
     text-decoration: underline;
 }
 
-
-main{
-    background-color: #f7f7f7;
-}
-
 section{
+    background-color: #f7f7f7;
     padding: 5vh 40px 10vh 40px;
     font-size: 3.5vw;
     line-height: 2em;
 }
 section > p{
-    padding-top: 5vh;
+    font-family: 'Sriracha', cursive;
+    margin-top: 5vh;
 }
 
 #bkg01{
@@ -65,6 +62,14 @@ section > p{
     background-size: cover;
     background-repeat: no-repeat;
     
+}
+
+section.img > p{
+    background-color: rgba(0, 0, 0, 0.493);
+    padding: 5px;
+    color: white;
+    text-shadow: 1px 1px black;
+    display: inline-block;
 }
 
 #bkg02{
