--- a/style.css
+++ b/style.css
@@ -66,6 +66,7 @@ section.img > p{
     display: inline-block;
 }
 section.img{
+    background-color: rgb(46, 46, 46);
     box-shadow: inset 0px 0px 20px 10px rgba(0, 0, 0, 0.308);
 }
 
